--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <head><title>Hojas de Calculo</title></head>
 <body>
 <a href="calc.html">Conceptos básicos</a>
+  <a href="titanic3.ods">Pasajeros del Titanic (Conjunto de datos abiertos)</a>
 </body>
 </html>
