--- a/calc.html
+++ b/calc.html
@@ -42,9 +42,9 @@
     <h2>Funciones matemáticas</h2>    
     <ul>
         <li>SUMAR: es una función matemática que permite sumar los valores de un conjunto de celdas o números. Por ejemplo, la función =SUMAR(A1:A5) suma los valores en las celdas A1 a A5</li>
-        <li>MÁXIMO: es una función matemática que devuelve el valor máximo de un conjunto de celdas o números. Por ejemplo, la función =MÁXIMO(A1:A5) devuelve el valor más alto en las celdas A1 a A5.</li>
-        <li>MÍNIMO: es una función matemática que devuelve el valor mínimo de un conjunto de celdas o números. Por ejemplo, la función =MÍNIMO(A1:A5) devuelve el valor más bajo en las celdas A1 a A5.</li>
-        <li>MEDIA ARITMÉTICA: Es una función matemática que devuelve el valor medio aritmético de un conjunto de celdas o números. Por ejemplo, la función =MEDIA(A1:A5) devuelve el promedio de los valores en las celdas A1 a A5.</li>
+        <li>MÁXIMO: es una función matemática que devuelve el valor máximo de un conjunto de celdas o números. Por ejemplo, la función =MAX(A1:A5) devuelve el valor más alto en las celdas A1 a A5.</li>
+        <li>MÍNIMO: es una función matemática que devuelve el valor mínimo de un conjunto de celdas o números. Por ejemplo, la función =MIN(A1:A5) devuelve el valor más bajo en las celdas A1 a A5.</li>
+        <li>MEDIA ARITMÉTICA: Es una función matemática que devuelve el valor medio aritmético de un conjunto de celdas o números. Por ejemplo, la función =PROMEDIO(A1:A5) devuelve el promedio de los valores en las celdas A1 a A5.</li>
     </ul>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/5uGwwljge0Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
